[package]
name = "heartbeats-simple"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Rust wrappers for heartbeats-simple-sys"
license = "MIT"
homepage = "https://github.com/libheartbeats/heartbeats-simple-rust"
repository = "https://github.com/libheartbeats/heartbeats-simple-rust"
keywords = ["heartbeats", "timing", "accuracy", "performance", "energy", "power"]

[lib]
name = "heartbeats_simple"
path = "lib.rs"

[dependencies.hbs]
path = "hbs-rs"

[dependencies.hbs-acc]
path = "hbs-acc-rs"

[dependencies.hbs-pow]
path = "hbs-pow-rs"

[dependencies.hbs-acc-pow]
path = "hbs-acc-pow-rs"
