[package]
name = "heartbeats-simple"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Rust abstractions for heartbeats-simple-sys"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libheartbeats/heartbeats-simple-rust"
repository = "https://github.com/libheartbeats/heartbeats-simple-rust"
keywords = ["heartbeats", "accuracy", "performance", "power"]

[lib]
name = "heartbeats_simple"
path = "lib.rs"

[dependencies]
hbs = "0.2"
hbs-acc = "0.2"
hbs-pow = "0.2"
hbs-acc-pow = "0.2"
