[package]
name = "heartbeats-simple"
version = "0.3.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Rust abstractions for heartbeats-simple-sys"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libheartbeats/heartbeats-simple-rust"
repository = "https://github.com/libheartbeats/heartbeats-simple-rust"
keywords = ["heartbeats", "accuracy", "performance", "power"]

[lib]
name = "heartbeats_simple"
path = "lib.rs"

[dependencies]
libc = "0.2"
heartbeats-simple-sys = "0.3"
