[package]
name = "hbs-acc"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Rust wrappers for hbs-acc-sys"
license = "MIT"
homepage = "https://github.com/libheartbeats/heartbeats-simple-rust"
repository = "https://github.com/libheartbeats/heartbeats-simple-rust"
keywords = ["heartbeats", "timing", "performance", "accuracy"]

[lib]
name = "hbs_acc"
path = "lib.rs"

[dependencies]
libc = "0.1"

[dependencies.hbs-acc-sys]
git = "https://github.com/libheartbeats/heartbeats-simple-sys.git"
