[package]
name = "hbs-acc"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Rust abstractions for hbs-acc-sys"
license = "MIT"
homepage = "https://github.com/libheartbeats/heartbeats-simple-rust"
repository = "https://github.com/libheartbeats/heartbeats-simple-rust"
keywords = ["heartbeats", "performance", "accuracy"]

[lib]
name = "hbs_acc"
path = "lib.rs"

[dependencies]
libc = "0.2"
hbs-acc-sys = "0.2"
