[package]
name = "hbs-pow"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Rust wrappers for hbs-pow-sys"
license = "MIT"
homepage = "https://github.com/libheartbeats/heartbeats-simple-rust"
repository = "https://github.com/libheartbeats/heartbeats-simple-rust"
keywords = ["heartbeats", "timing", "performance", "energy", "power"]

[lib]
name = "hbs_pow"
path = "lib.rs"

[dependencies]
libc = "0.2"

[dependencies.hbs-pow-sys]
git = "https://github.com/libheartbeats/heartbeats-simple-sys.git"
