[package]
name = "hbs-pow"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Rust abstractions for hbs-pow-sys"
license = "MIT"
homepage = "https://github.com/libheartbeats/heartbeats-simple-rust"
repository = "https://github.com/libheartbeats/heartbeats-simple-rust"
keywords = ["heartbeats", "performance", "power"]

[lib]
name = "hbs_pow"
path = "lib.rs"

[dependencies]
libc = "0.2"
hbs-pow-sys = "0.2"
