[package]
name = "hbs"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Rust wrappers for hbs-sys"
license = "MIT"
homepage = "https://github.com/connorimes/heartbeats-simple-rust"
repository = "https://github.com/connorimes/heartbeats-simple-rust"
keywords = ["heartbeats", "timing", "performance"]

[lib]
name = "hbs"
path = "lib.rs"
