[package]
name = "hbs"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Rust abstractions for hbs-sys"
license = "MIT"
homepage = "https://github.com/libheartbeats/heartbeats-simple-rust"
repository = "https://github.com/libheartbeats/heartbeats-simple-rust"
keywords = ["heartbeats", "performance"]

[lib]
name = "hbs"
path = "lib.rs"

[dependencies]
libc = "0.2"
hbs-sys = "0.2"
